--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,6 @@
-OPEN_AI_SECRET=YOUR_SECRET
-MONGODB_URL=YOUR_SECRET
-JWT_SECRET=YOUR_SECRET
-COOKIE_SECRET=YOUR_SECRET
+OPEN_AI_SECRET=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
+OPENAI_ORGANIZATION_ID=org-qTIUpoGQKN9GBscm5jhbdJbj
+MONGODB_URL=mongodb+srv://shanusj32:9744675621@mernapp.kmiatvf.mongodb.net/
+JWT_SECRET=asdfhjklfd
+COOKIE_SECRET=skjsjlclclslksldk
+PORT=5000
